Fixed background stretching

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1310,7 +1310,8 @@ input, select, textarea {
 		background-image: url("images/overlay.png"), url("images/bg2.jpg");
 		background-color: #2b2735;
 		background-repeat: repeat, no-repeat;
-		background-size: auto, 100% 100%;
+		background-size: auto, cover;
+		background-position: center;
 		background-attachment: fixed;
 		overflow-y: scroll;
 	}
